fixed the card spacing bug and formatted the page a little more

--- a/src/App.css
+++ b/src/App.css
@@ -2,33 +2,35 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
-
 .search {
-  margin: 1%;
+  margin: 1% 0 3% 0;
+  max-width: calc(80% + 10vmin);
 }
 
 #root {
-  background-color: rgb(139, 139, 139);
+  background-color: gray;
 }
 
 .addHeli, .home {
   float: left;
+}
+
+.content {
+  margin: auto;
+  width: 75%;
+}
+
+.header {
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  margin-bottom: 1%;
+}
+
+.helicopter-Img {
+  height: calc(80px + 4.5vmin);
+  max-width: calc(100px + 30vmin);
 }
